[package]
name = "easy-fs"
version = "0.1.0"
authors = ["KuangjuX <qcx@tju.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FAT32 = { path = "../FAT32" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.release]
debug = true

